OPENNLP-1446 Investigate why LeskEvaluatorTest and MFSEvaluatorTest fail while parsing 'EnglishLS.train' (#113)